@@ -53,7 +53,7 @@ setkeyv = function(x, cols, verbose=getOption("datatable.verbose"))
 key = function(x) attr(x,"sorted")
 
 "key<-" = function(x,value) {
-    warning("The key(x)<-value form of setkey copies the whole table. This is due to <- in R itself. Please change to setkeyv(x,value) or setkey(x,...) which do not copy and are faster. See help('setkey'). You can safely ignore this warning if it is inconvenient to change right now. Setting options(warn=2) turns this warning into an error, so you can then use traceback() to find and change your key<- calls.")
+    warning("The key(x)<-value form of setkey can copy the whole table. This is due to <- in R itself. Please change to setkeyv(x,value) or setkey(x,...) which do not copy and are faster. See help('setkey'). You can safely ignore this warning if it is inconvenient to change right now. Setting options(warn=2) turns this warning into an error, so you can then use traceback() to find and change your key<- calls.")
     setkeyv(x,value)
     # The returned value here from key<- is then copied by R before assigning to x, it seems. That's
     # why we can't do anything about it without a change in R itself. If we return NULL (or invisible()) from this key<-
