@@ -29,6 +29,8 @@ SEXP rbindlist();
 SEXP EvalDepth();
 SEXP vecseq();
 SEXP copyattr();
+SEXP setlistelt();
+SEXP setnamed();
 
 // .Externals
 SEXP fastmean();
@@ -57,6 +59,8 @@ R_CallMethodDef callMethods[] = {
 {"CEvalDepth", (DL_FUNC) &EvalDepth, -1},
 {"Cvecseq", (DL_FUNC) &vecseq, -1},
 {"Ccopyattr", (DL_FUNC) &copyattr, -1},
+{"Csetlistelt", (DL_FUNC) &setlistelt, -1},
+{"Csetnamed", (DL_FUNC) &setnamed, -1},
 {NULL, NULL, 0}
 };
 
