@@ -66,16 +66,11 @@ NULL
    a
 1: 1
 2: 8
-> DT[1][,a:=9L]      # yes (since DT[1] is a new select) due to is.name in := in [.data.table  (but evaldepth is at tigger here)
-   a
-1: 9
-> DT[2,a:=10L][1]    # yes (because eval depth is 9, above trigger, in the := here). Maybe this gets converted to nested `[.data.table` calls.
+> DT[1][,a:=9L]      # no (was too tricky to detect that DT[1] is a new object). Simple rule is that := always doesn't print
+> DT[2,a:=10L][1]    # yes (because eval depth is above trigger in the := here via nested `[.data.table` calls, iiuc).
    a
 1: 1
-> DT[1,a:=10L][1,a:=10L]   # want no, but yes currently. Might be tricky to get right. When multiple := in j is implemented, this goes away.
-    a
-1: 10
-2: 10
+> DT[1,a:=10L][1,a:=10L]   # no
 > DT[,a:=as.integer(a)]   # no
 > DT[1,a:=as.integer(a)]  # no
 > DT[1,a:=10L][]     # yes. ...[] == oops, forgot print(...)
